--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!doctype html>
-<html lang="en-us">
+<html lang="en">
 <head>
-  <title>Your Name</title>
+  <meta charset="utf-8">
+
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
 </head>
+
 <body>
- <h1>Your Name</h1>
+  <script src="js/scripts.js"></script>
+  <H1>ROSA MARIA GARCES PEÑA</H1>
+  <H2>WDD 230: Assignment Portal</H2>
+  <ul>
+    <li>Lesson 01:<a href="">Curse Assignments Portal </a></li>
+    <li>Lesson 02:<a href="">Design Principles Document </a></li>
+  </ul>
 </body>
 </html>
