--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/normalice.css">
+  
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Indie+Flower&family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="css/normalice.css">
+  <link rel="stylesheet" href="css/medium.css">
 </head>
 
     
