--- a/lesson2/color.html
+++ b/lesson2/color.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -24,16 +23,7 @@
 	</ul>
 </nav>
 <main>
-	<h2>Name Web Site:</h2>
-    <h2>InfoWeather</h2>
-    <h2>Site Purpose:</h2>
-    <h2>Knowing the weather news to make appropriate decisions 
-        and avoid unexpected situations that could endanger the 
-        population.</h2>
-    <h2>Domine:</h2>
-    <h2>infowheather.org</h2>
-    <h2>Logo:</h2>
-    <img src="imagenes/logo.png">
+	<img src="imagenes/paleta.jpg">
 </main>
 <footer>
 	&copy;2021 &nbsp; .:|:. &nbsp; Rosa M. Garces &nbsp; .:|:. &nbsp; Brigham Young University-Idaho
