--- a/lesson2/target.html
+++ b/lesson2/target.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -24,16 +23,17 @@
 	</ul>
 </nav>
 <main>
-	<h2>Name Web Site:</h2>
-    <h2>InfoWeather</h2>
-    <h2>Site Purpose:</h2>
-    <h2>Knowing the weather news to make appropriate decisions 
-        and avoid unexpected situations that could endanger the 
-        population.</h2>
-    <h2>Domine:</h2>
-    <h2>infowheather.org</h2>
-    <h2>Logo:</h2>
-    <img src="imagenes/logo.png">
+	<h2>A description of the target audience:</h2>
+    <h2>The audience of this website is people over 18 
+        years of age who are interested in being warned 
+        against possible weather problems that may arise and 
+        where prevention could save our lives.</h2>
+    <h2>Two personas:</h2>
+    <h2>Mariuxi Garces, Javier Carvajal</h2>
+    <h2>At least five listed scenarios:</h2>
+    <h2>Torrential Rains, Snowstorms, Tornadoes, 
+        Electrical Storms, Hurricanes.</h2>
+    
 </main>
 <footer>
 	&copy;2021 &nbsp; .:|:. &nbsp; Rosa M. Garces &nbsp; .:|:. &nbsp; Brigham Young University-Idaho
