--- a/lesson2/typography.html
+++ b/lesson2/typography.html
@@ -19,21 +19,25 @@
 		<li><a href="target.html">Target Audience</a></li>
 		<li><a href="color.html">Color Scheme</a></li>
 		<li><a href="Typography.html">Typography</a></li>
-		
 	</ul>
 </nav>
 <main>
-	<h2>A description of the target audience:</h2>
-    <h2>The audience of this website is people over 18 
-        years of age who are interested in being warned 
-        against possible weather problems that may arise and 
-        where prevention could save our lives.</h2>
-    <h2>Two personas:</h2>
-    <h2>Mariuxi Garces, Javier Carvajal</h2>
-    <h2>At least five listed scenarios:</h2>
-    <h2>Torrential Rains, Snowstorms, Tornadoes, 
-        Electrical Storms, Hurricanes.</h2>
-    
+    <h2>Header:</h2>
+    <h2>Merriweather Sans, 40px</h2>
+    <h2>Primary Navegation:</h2>
+    <h2>Merriweather Sans, 30px</h2>
+    <h2>Footer Navegation:</h2>
+    <h2>Merriweather Sans, 200px</h2>
+    <h2>h1:</h2>
+    <h2>Merriweather Sans, 30px</h2>
+    <h2>h2:</h2>
+    <h2>Merriweather Sans, 25px</h2>
+    <h2>h3:</h2>
+    <h2>Merriweather Sans, 20px</h2>
+    <h2>Paragraph</h2>
+    <h2>Electrolize, 16px</h2>
+
+
 </main>
 <footer>
 	&copy;2021 &nbsp; .:|:. &nbsp; Rosa M. Garces &nbsp; .:|:. &nbsp; Brigham Young University-Idaho
