--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -19,7 +19,7 @@
 		<li><a href="index.html" class="active"> Home</a></li>
 		<li><a href="target.html">Target Audience</a></li>
 		<li><a href="color.html">Color Scheme</a></li>
-		<li><a href="Typography.html">Typography</a></li>
+		<li><a href="typography.html">Typography</a></li>
 		
 	</ul>
 </nav>
