--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <ul>
           <li>Lesson 01:<a href="">Curse Assignments Portal </a></li>
           <li>Lesson 02:<a href="lesson2/index.html">Site Plan Weather</a></li>
-          <li>Lesson 02:<a href="weather/preston.html">InfoWeather Site</a></li>
+          <li>Lesson 03:<a href="weather/preston.html">InfoWeather Site</a></li>
+          <li>Lesson 03:<a href="weatherResponsiveImages/preston.html">Responsive Images</a></li>
         </ul>
         
         <div id="fin"><H3>(C) 2021- Rosa Maria Garcés Peña - <a href="https://www.byui.edu/online">BYUI Online Learning</a></H3></div>
