--- a/weather/preston.html
+++ b/weather/preston.html
@@ -23,6 +23,7 @@
 <!-- enhance-desktop -->
 <link href="css/large.css" rel="stylesheet">
 <link href="css/formato.css" rel="stylesheet">
+<script type="text/javascript" src="js/scripts.js"></script>
 
      
 </head>
@@ -58,10 +59,10 @@
         <h2 class="tituloPagina">Preston Idaho</h2>
         <div class="herodiv">
             <figure class="imagenprincipal">
-                    <img src="images/preston.jpg" alt="Preston City" sizes="50vw"
-                    srcset="images/preston500.jpg 200w,
-                    images/preston500.jpg 500w,
-                    images/preston.jpg 800w">
+                    <img src="images/cielo1100.jpg" alt="sky" sizes="50vw"
+                    srcset="images/cielo500.jpg 500w,
+                    images/cielo800.jpg 800w,
+                    images/cielo1100.jpg 1100w">
 
             </figure>
             <section class="weatherSummary">
@@ -74,13 +75,16 @@
                     <p>Wind Chill:</p>
                     <p>Humidity:</p>
                     <p>Wind Speed:</p>
+                    <p>Wind chill factor is:</p>
+                    <button type="button" onclick="CalcularFactor()">Calculate</button>
                 </div>
                 <div class="grid-col2">
                     <p>Summy</p>
                     <p>76°F</p>
-                    <p>°F</p>
+                    <p><input type="text" id="dato1" style="width : 100px; height: 20px"></p>
                     <p>69%</p>
-                    <p>5mph</p>
+                    <p><input type="text" id="dato2" style="width : 100px; height: 20px"></p>
+                    <p><div id="outputDiv"></div></p>    
                 </div>
                 
             </div>
