--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li>Lesson 02:<a href="lesson2/index.html">Site Plan Weather</a></li>
           <li>Lesson 03:<a href="weather/preston.html">InfoWeather Site</a></li>
           <li>Lesson 03:<a href="weather/preston.html">Responsive Images</a></li>
+          <li>Lesson 04:<a href="lesson4-lazyload/lazyload.html">Progresive load of image</a></li>
         </ul>
         
         <div id="fin"><H3>(C) 2021- Rosa Maria Garcés Peña - <a href="https://www.byui.edu/online">BYUI Online Learning</a></H3></div>
