--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>General Menu</title>
   <meta name="description" content="The access point">
   <meta name="author" content="SitePoint">
 
