--- a/lesson4-lazyload/lazyload.html
+++ b/lesson4-lazyload/lazyload.html
@@ -21,27 +21,27 @@
         <main> 
 
             <picture>
-                <img src="images/placeholder.png" data-src="images/image1.jpg" alt="dddd">
+                <img src="images/placeholder.png" data-src="images/image1.jpg" alt="House">
             </picture>
             
             <picture>
-                <img src="images/placeholder.png" data-src="images/image2.jpg" alt="beautiful sunset over barley field">                
+                <img src="images/placeholder.png" data-src="images/image2.jpg" alt="Beach House">                
             </picture>
 
             <picture>
-                <img src="images/placeholder.png" data-src="images/image3.jpg" alt=" flowers in wheat field">
+                <img src="images/placeholder.png" data-src="images/image3.jpg" alt="Abstract">
             </picture>
 
             <picture>
-                <img src="images/placeholder.png" data-src="images/image4.jpg" alt="beautiful red flower">
+                <img src="images/placeholder.png" data-src="images/image4.jpg" alt="Flower">
             </picture>
 
             <picture>
-                <img src="images/placeholder.png" data-src="images/image5.jpg" alt="beautiful poppies">
+                <img src="images/placeholder.png" data-src="images/image5.jpg" alt="Bridge">
             </picture>
 
             <picture>
-                <img src="images/placeholder.png" data-src="images/image6.jpg" alt="beautiful tulips">
+                <img src="images/placeholder.png" data-src="images/image6.jpg" alt="Black dog">
             </picture> 
             
         </main>
