--- a/lesson4-wednesday/gallery-7.html
+++ b/lesson4-wednesday/gallery-7.html
@@ -60,7 +60,7 @@
         <h2 class="tituloPagina">Wheather Gallery</h2>
         <div class="container">
             <picture class="gale">
-                <img class="norm" src="images/placeholder.png" data-src="images/solminnesota.jpg" alt="Weather Minesota">
+                <img class="norm" src="images/placeholder.png" data-src="images/Solminnesota.jpg" alt="Weather Minesota">
                 <figcaption>Heat in Minesota</figcaption>
             </picture>
             <picture class="gale">
@@ -82,7 +82,7 @@
                 <figcaption>Columbus Wheather Forecast</figcaption>
             </picture>
             <picture class="gale">
-                <img class="norm" src="images/placeholder.png" data-src="images/chennai.jpg" alt="Weather Chenai">
+                <img class="norm" src="images/placeholder.png" data-src="images/Chennai.jpg" alt="Weather Chenai">
                 <figcaption>Chenai weather forecast</figcaption>
             </picture>
             <picture class="gale">
