--- a/lesson4-saturday/gallery-7.html
+++ b/lesson4-saturday/gallery-7.html
@@ -49,15 +49,15 @@
             <li class="active"><a href="preston.html">Preston</a></li>
             <li><a href="#">Soda Spring</a></li>
             <li><a href="#">Fish Haven</a></li> 
-            <li><a href="#">Storm Center</a></li>   
-            <li><a href="#">Galery</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>   
+            <li><a href="gallery-7.html">Galery</a></li>
         </ul>
     </nav>
     
     
 <!-- CONTENT HERE -->
     <main class="clearfix">
-        <h2 class="tituloPagina">Wheather Gallery</h2>
+        <h2 class="tituloPagina">Weather Gallery</h2>
         <div class="container">
             <picture class="gale">
                 <img class="norm" src="images/placeholder.png" data-src="images/Solminnesota.jpg" alt="Weather Minesota">
