--- a/lesson4-saturday/preston.html
+++ b/lesson4-saturday/preston.html
@@ -48,7 +48,7 @@
             <li class="active"><a href="preston.html">Preston</a></li>
             <li><a href="#">Soda Spring</a></li>
             <li><a href="#">Fish Haven</a></li> 
-            <li><a href="#">Storm Center</a></li>   
+            <li><a href="stormcenter.html">Storm Center</a></li>   
             <li><a href="gallery-7.html">Galery</a></li>
         </ul>
     </nav>
