--- a/lesson4-saturday/stormcenter.html
+++ b/lesson4-saturday/stormcenter.html
@@ -118,9 +118,9 @@
 
                 <fieldset> 
                     <legend>User in-Danger level</legend>
-                    <Label class="sbs"><input type="radio" name="audience" value="yes">Beginner</Label>
-                    <Label class="sbs"><input type="radio" name="audience" value="meabe">Intermediate</Label>
-                    <Label class="sbs"><input type="radio" name="audience" value="not">Advanced</Label>
+                    <Label class="sbs"><input type="radio" name="audience" value="yes">Yes</Label>
+                    <Label class="sbs"><input type="radio" name="audience" value="meabe">Maybe</Label>
+                    <Label class="sbs"><input type="radio" name="audience" value="not">Not</Label>
                 </fieldset>
                 <fieldset>
                     <legend>Aditional Information or Comments</legend>
