--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li>Lesson 04:<a href="Form-start/index.html">Form Star</a></li>
           <li>Lesson 04:<a href="lesson4-saturday/stormcenter.html">Storm Center</a></li>
           <li>Lesson 09:<a href="lesson9/prophets.html">Latter Day Prophets</a></li>
-          <li>Lesson 05:<a href="lesson5/index.html">Home Page</a></li>
+          <li>Lesson 05:<a href="lesson5-wednesday/">Home Page</a></li>
         </ul>
         
         <div id="fin"><H3>(C) 2021- Rosa Maria Garcés Peña - <a href="https://www.byui.edu/online">BYUI Online Learning</a></H3></div>
