--- a/lesson5-wednesday/gallery-7.html
+++ b/lesson5-wednesday/gallery-7.html
@@ -45,7 +45,7 @@
     <nav class="clearfix">
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li class="active"><a href="preston.html">Preston</a></li>
             <li><a href="#">Soda Spring</a></li>
             <li><a href="#">Fish Haven</a></li> 
