--- a/lesson10-saturday/preston.html
+++ b/lesson10-saturday/preston.html
@@ -45,7 +45,7 @@
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="preston.html">Preston</a></li>
+            <li class="active"><a href="preston-10.html">Preston</a></li>
             <li><a href="#">Soda Spring</a></li>
             <li><a href="#">Fish Haven</a></li> 
             <li><a href="stormcenter.html">Storm Center</a></li>   
@@ -162,5 +162,6 @@
     </div>
 </footer>
 <script src="js/imagehandling.js"></script>
+<script src="js/weatherapi.js"></script>
 </body>
 </html>
