--- a/lesson10-saturday/preston-10.html
+++ b/lesson10-saturday/preston-10.html
@@ -88,32 +88,32 @@
             </div>
             </section>
         </div>
-        <h2 class="tituloPagina">5 day Forecast</h2>
+        <h2 class="tituloPagina">5 day Forecast hola</h2>
             <div class="grid">
                 <div class="grid-col">
                     <span class="col-head">Wed</span>
-                    <img class="marco" src="images/SUN.png" alt="kitten!">
-                    <span class="data">89°F</span>
+                    <span class="marco" id="imagesrc0"></span> &nbsp; <img src="" alt="" id="icon0"></p>
+                    <span class="data" id="temp0"></span>&deg; F</p>
                 </div>
                 <div class="grid-col">
                     <span class="col-head">Thu</span>
-                    <img  class="marco" src="images/SUN.png" alt="kitten!">
-                    <span class="data">87°F</span>
+                    <span class="marco" id="imagesrc1"></span> &nbsp; <img src="" alt="" id="icon1"></p>
+                    <span class="data" id="temp1"></span>&deg; F</p>
                 </div>
                 <div class="grid-col">
                     <span class="col-head">Fri</span>
-                    <img class="marco" src="images/SUN.png" alt="kitten!">
-                    <span class="data">78°F</span>
+                    <span class="marco" id="imagesrc2"></span> &nbsp; <img src="" alt="" id="icon2"></p>
+                    <span  class="data" id="temp2"></span>&deg; F</p>
                 </div>
                 <div class="grid-col">
                     <span class="col-head">Sat</span>
-                    <img class="marco" src="images/SUN.png" alt="kitten!">
-                    <span class="data">75°F</span>
+                    <span class="marco" id="imagesrc3"></span> &nbsp; <img src="" alt="" id="icon3"></p>
+                    <span class="data" id="temp3"></span>&deg; F</p>
                 </div>
                 <div class="grid-col">
                     <span class="col-head">Sun</span>
-                    <img class="marco" src="images/SUN.png" alt="kitten!">
-                    <span class="data">72°F</span>
+                    <span class="marco" id="imagesrc4"></span> &nbsp; <img src="" alt="" id="icon4"></p>
+                    <span class="data" id="temp4"></span>&deg; F</p>
                 </div>
 
 
