--- a/lesson10-saturday/preston-10.html
+++ b/lesson10-saturday/preston-10.html
@@ -68,7 +68,7 @@
             <section class="weatherSummary">
              <h2>Weather Summary</h2>
              <hr>
-             <div class="grid">
+             <div class="grid-sumary">
                 <div class="grid-col1">
                     <p>Currenty:</p>
                     <p>Temp:</p>
