--- a/lesson10-saturday/preston-10.html
+++ b/lesson10-saturday/preston-10.html
@@ -16,13 +16,14 @@
 
 <!-- STYLE SHEETS -->
 <link href="css/normalize.css" rel="stylesheet">
+<link href="css/formato.css" rel="stylesheet">
 <!-- phone-default -->
 <link href="css/small.css" rel="stylesheet">
 <!-- enhance-tablet -->
 <link href="css/medium.css" rel="stylesheet">
 <!-- enhance-desktop -->
 <link href="css/large.css" rel="stylesheet">
-<link href="css/formato.css" rel="stylesheet">
+
 <script type="text/javascript" src="js/scripts.js"></script>
 
      
@@ -88,7 +89,7 @@
             </div>
             </section>
         </div>
-        <h2 class="tituloPagina">5 day Forecast hola</h2>
+        <h2 class="tituloPagina">5 day Forecast</h2>
             <div class="grid">
                 <div class="grid-col">
                     <span class="col-head">Wed</span>
