--- a/lesson10-saturday/preston-10.html
+++ b/lesson10-saturday/preston-10.html
@@ -154,6 +154,7 @@
         </div>
         <div class="grid-colf">
                 <p> &copy; <span id="currentyear"> </span>  | Rosa Garces | <a href="https://www.byui.edu/online" target="_blank"> BYU-Idaho Online Learning</a><br><span id="currentday"></span></p>
+                <a href="https://openweathermap.org" target="_blank">OpenWeatherMap</a></p>
         </div>
         <div class="grid-colf">
             <img src="images/mapa.png" alt="mapa">
