--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <li>Lesson 09:<a href="lesson9/prophets.html">Latter Day Prophets</a></li>
           <li>Lesson 05:<a href="lesson5-wednesday/index.html">Home Page</a></li>
           <li>Lesson 10:<a href="lesson10-saturday/preston-10.html">Preston</a></li>
+          <li>Lesson 11:<a href="lesson11/index.html">InfoWather</a></li>
         </ul>
         
         <div id="fin"><H3>(C) 2021- Rosa Maria Garcés Peña - <a href="https://www.byui.edu/online">BYUI Online Learning</a></H3></div>
