--- a/lesson6/soda.html
+++ b/lesson6/soda.html
@@ -47,8 +47,8 @@
         <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Spring</a></li>
-            <li><a href="#">Fish Haven</a></li> 
+            <li><a href="soda.html">Soda Spring</a></li>
+            <li><a href="fish.html">Fish Haven</a></li> 
             <li><a href="stormcenter.html">Storm Center</a></li>   
             <li><a href="gallery-7.html">Galery</a></li>
         </ul>
@@ -57,7 +57,7 @@
     
 <!-- CONTENT HERE -->
     <main class="clearfix">
-        <h2 class="tituloPagina">Preston Idaho</h2>
+        <h2 class="tituloPagina">Soda Springs</h2>
         <div class="herodiv">
             <figure class="imagenprincipal">
                     <img src="images/cielo1100.jpg" alt="sky" sizes="60vw"
@@ -120,9 +120,6 @@
 
                 
             </div>
-            <section>
-                <div class="cardevent"></div>
-            </section>  
             <figure class=imagen2>
                 <img src="images/otoño2.jpg" alt="Fall photo" sizes="50vw"
                 srcset="images/otoño1.jpg 200w,
@@ -165,7 +162,6 @@
     </div>
 </footer>
 <script src="js/imagehandling.js"></script>
-<script src="js/weatherapi.js"></script>
-<script src="js/weatherapipreston.js"></script>
+<script src="js/weatherapisoda.js"></script>
 </body>
 </html>
