--- a/lesson6/gallery-7.html
+++ b/lesson6/gallery-7.html
@@ -47,8 +47,8 @@
         <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Spring</a></li>
-            <li><a href="#">Fish Haven</a></li> 
+            <li><a href="soda.html">Soda Spring</a></li>
+            <li><a href="fish.html">Fish Haven</a></li> 
             <li><a href="stormcenter.html">Storm Center</a></li>   
             <li><a href="gallery-7.html">Galery</a></li>
         </ul>
