--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -47,8 +47,8 @@
         <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Spring</a></li>
-            <li><a href="#">Fish Haven</a></li> 
+            <li><a href="soda.html">Soda Spring</a></li>
+            <li><a href="fish.html">Fish Haven</a></li> 
             <li><a href="stormcenter.html">Storm Center</a></li>   
             <li><a href="gallery-7.html">Galery</a></li>
         </ul>
@@ -120,9 +120,12 @@
 
                 
             </div>
-            <section>
+
+            <section class="eventbox">
+                <h2 class="tituloPagina">Events</h2>
                 <div class="cardevent"></div>
-            </section>  
+            </section>
+
             <figure class=imagen2>
                 <img src="images/otoño2.jpg" alt="Fall photo" sizes="50vw"
                 srcset="images/otoño1.jpg 200w,
@@ -166,6 +169,6 @@
 </footer>
 <script src="js/imagehandling.js"></script>
 <script src="js/weatherapi.js"></script>
-<script src="js/weatherapipreston.js"></script>
+<script src="js/datatownspreston.js"></script>
 </body>
 </html>
