--- a/lesson6/stormcenter.html
+++ b/lesson6/stormcenter.html
@@ -46,8 +46,8 @@
         <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Spring</a></li>
-            <li><a href="#">Fish Haven</a></li> 
+            <li><a href="soda.html">Soda Spring</a></li>
+            <li><a href="fish.html">Fish Haven</a></li> 
             <li><a href="stormcenter.html">Storm Center</a></li>   
             <li><a href="gallery-7.html">Galery</a></li>
         </ul>
@@ -59,10 +59,10 @@
         <h2 class="tituloPagina">Storm Center</h2>
        
             <figure class="imagenprincipal">
-                    <img src="images/cielo1100.jpg" alt="sky" sizes="50vw"
-                    srcset="images/cielo500.jpg 500w,
-                    images/cielo800.jpg 800w,
-                    images/cielo1100.jpg 1100w">
+                    <img src="images/storm.png" alt="sky" sizes="50vw"
+                    srcset="images/storm2.png 500w,
+                    images/storm.png 800w,
+                    images/storm.png 1100w">
             </figure>
           
             <form method="get" action="thanks.html">
