--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <li>Lesson 10:<a href="lesson10-saturday/preston-10.html">Preston</a></li>
           <li>Lesson 11:<a href="lesson11/index.html">InfoWather</a></li>
           <li>Lesson 06:<a href="lesson6/index.html">InfoWather(final)</a></li>
+          <li>Lesson 07:<a href="scootsSite/index.html">Scoots</a></li>
         </ul>
         
         <div id="fin"><H3>(C) 2021- Rosa Maria Garcés Peña - <a href="https://www.byui.edu/online">BYUI Online Learning</a></H3></div>
