--- a/scootsSite/rentals.html
+++ b/scootsSite/rentals.html
@@ -119,7 +119,7 @@
             </div>
         </section>
 
-        <section class="eventbox">
+        <section class="tablebox">
             <table class="formatotabla">
                 <tr>
               
