--- a/scootsSite/index.html
+++ b/scootsSite/index.html
@@ -54,9 +54,9 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="rentals.html">Rentals
             </a></li>
-            <li><a href="reservation.html">Reservation</a></li>
+            <li><a href="reservations.html">Reservation</a></li>
             <li><a href="tours.html">Tours</a></li> 
-            <li><a href="contact.html">Contact</a></li>   
+            <li><a href="contactus.html">Contact</a></li>   
             
         </ul>
     </nav>
@@ -80,6 +80,7 @@
                     <p>Currenty:</p>
                     <p>Temp.:</p>
                     <p>Humidity:</p>
+                    
                 </div>
                 <div class="grid-col2">
                     <div id="txtdescripcion"></div>
@@ -87,6 +88,8 @@
                     <div id="txthumidity"></div>
                 </div> 
             </div>
+            <hr>
+            <h2>¡Cozumel is your destiny!</h2>
             </section>
         </div>
         <div class=forecast>
@@ -133,7 +136,7 @@
                 <p>- ATV Side-by-Side</p>
                 <p>- Honda Pioneer 1000</p>
                 <br>
-                <p>More about type of rentals<a href="rentals.html">here</a></p>
+                <p>More about type of rentals <a href="rentals.html">here</a></p>
                 <br>
                 <br>
                 <form method="get" action="Reservations.html">
